--- a/src/Common/MyClub.CrossCutting.Localization/MyClubResources.resx
+++ b/src/Common/MyClub.CrossCutting.Localization/MyClubResources.resx
@@ -1732,8 +1732,8 @@ Voir le centre de notifications pour plus de détails.</value>
   <data name="SelectConflicts" xml:space="preserve">
     <value>Sélectionner les conflits</value>
   </data>
-  <data name="EditConflicts" xml:space="preserve">
-    <value>Modifier les conflits</value>
+  <data name="RescheduleConflicts" xml:space="preserve">
+    <value>Replanifier les conflits</value>
   </data>
   <data name="RescheduleOf" xml:space="preserve">
     <value>Décaler de</value>
@@ -1875,7 +1875,31 @@ Les colonnes en première position seront évaluées en première. Les colonnes 
   <data name="System" xml:space="preserve">
     <value>Système</value>
   </data>
-  <data name="AllowRescheduleWithDragAndDrop" xml:space="preserve">
-    <value>Activer la reprogrammation</value>
+  <data name="RescheduleStadium" xml:space="preserve">
+    <value>Modifier le lieu</value>
+  </data>
+  <data name="ConflictsTeamXIsBusyWarning" xml:space="preserve">
+    <value>{0} joue 2 matchs qui se déroulent en même temps.</value>
+  </data>
+  <data name="ConflictsStadiumXIsOccupancyWarning" xml:space="preserve">
+    <value>2 matchs se déroulent en même temps à {0}.</value>
+  </data>
+  <data name="ConflictsRestTimeOfTeamXIsNotRespectedWarning" xml:space="preserve">
+    <value>Le temps de repos de {0} n'est pas respecté.</value>
+  </data>
+  <data name="ConflictsRotationTimeOfStadiumXIsNotRespectedWarning" xml:space="preserve">
+    <value>Le temps de rotation entre les 2 matchs se déroulant à {0} n'est pas respecté.</value>
+  </data>
+  <data name="HasSchedulingConflictsWarning" xml:space="preserve">
+    <value>Attention, des conflits ont été détectés.</value>
+  </data>
+  <data name="ShowConflicts" xml:space="preserve">
+    <value>Voir les conflits</value>
+  </data>
+  <data name="NoRescheduleStadium" xml:space="preserve">
+    <value>Ne pas modifier le lieu</value>
+  </data>
+  <data name="NoReschedule" xml:space="preserve">
+    <value>Ne pas décaler</value>
   </data>
 </root>
